---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF012.py:9:34: RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
   |
 7 |     }
 8 | 
 9 |     mutable_default: list[int] = []
   |                                  ^^ RUF012
10 |     immutable_annotation: Sequence[int] = []
11 |     without_annotation = []
   |

RUF012.py:11:26: RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
   |
 9 |     mutable_default: list[int] = []
10 |     immutable_annotation: Sequence[int] = []
11 |     without_annotation = []
   |                          ^^ RUF012
12 |     class_variable: ClassVar[list[int]] = []
13 |     final_variable: Final[list[int]] = []
   |

RUF012.py:25:26: RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
   |
23 |     mutable_default: list[int] = []
24 |     immutable_annotation: Sequence[int] = []
25 |     without_annotation = []
   |                          ^^ RUF012
26 |     perfectly_fine: list[int] = field(default_factory=list)
27 |     class_variable: ClassVar[list[int]] = []
   |


